Fix to websphere deployment